@@ -1,5 +1,5 @@
 /* This file is part of the KDE project
-   Copyright (C) 2001 Matthias Kalle Dalheimer <kalle@kde.org>
+   Copyright (C) 2000,2001,2002,2003,2004 Laurent Montel <montel@kde.org>
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -17,12 +17,15 @@
  * Boston, MA 02110-1301, USA.
 */
 
-#ifndef __KCHARTLINE3DCONFIGPAGE_H__
-#define __KCHARTLINE3DCONFIGPAGE_H__
+#ifndef __KCCONFIGSUBTYPEPOLARPAGE_H__
+#define __KCCONFIGSUBTYPEPOLARPAGE_H__
 
 #include <QWidget>
-#include <knuminput.h>
 
+class QCheckBox;
+class QRadioButton;
+class QLineEdit;
+class QSpinBox;
 class QCheckBox;
 
 namespace KChart
@@ -30,27 +33,20 @@ namespace KChart
 
 class KChartParams;
 
-class KChartLine3dConfigPage : public QWidget
+class KCConfigSubtypePolarPage : public QWidget
 {
     Q_OBJECT
 
 public:
-    KChartLine3dConfigPage( KChartParams* params,
-                                 QWidget* parent );
+    KCConfigSubtypePolarPage( KChartParams* params,QWidget* parent );
     void init();
     void apply();
-protected slots:
-    void slotChange3DParameter(bool);
 private:
     KChartParams* _params;
-    KIntNumInput* angle3dX;
-    KIntNumInput* angle3dY;
-    KIntNumInput* lineWidth;
-    KDoubleNumInput* depth;
-    QCheckBox* line3d, *drawShadowColor;
-    QCheckBox  *lineMarkers;
+    QCheckBox *polarMarker;
+    QCheckBox *showCircularLabel;
+    QSpinBox *angle, *lineWidth;
 };
-
 
 }  //KChart namespace
 
